# mw

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  python-package.yml  python-publish.yml
data/share/man/man1/: mw.1
mw/: __init__.py  __main__.py  app.py  command_handler.py  commands.py  display.py  session.py  stack.py  types.py
pages/: index.html  index.md
test/: test_app.py  test_command.py  test_command_parse.py  test_commands.py
