[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mw"
authors = [{name = "Jamie Hardt", email = "jamiehardt@me.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = "~=3.8"
classifiers = [
    'Topic :: Multimedia',
    'Topic :: Multimedia :: Sound/Audio',
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    "Programming Language :: Python :: 3.8",  
    "Programming Language :: Python :: 3.9",    
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
  "numpy ~= 1.24.3",
  "pydub ~= 0.25.1",
  "apeek ~= 0.1.0",
  "gnureadline ~= 8.1.2"
]
keywords = [
    'waveform', 
    'metadata', 
    'audio', 
    'console'
]

[tool.flit.external-data]
directory = "data"

[tool.flit.module]
name = "mw"

[project.optional-dependencies]
doc = [
    'sphinx >= 5.3.0',
    'sphinx_rtd_theme >= 1.1.1',
]

[project.urls]
Home = "https://github.com/iluvcapra/mw"
# Documentation = "https://apeek.readthedocs.io/"
Source = "https://github.com/iluvcapra/mw.git"
Issues = 'https://github.com/iluvcapra/mw/issues' 

[project.entry_points.console_scripts]
apeek = 'mw.__main__:main'

[project.scripts]
apeek = "mw.__main__:main"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
